@@ -916,4 +916,5 @@
  - Bugfix: the glass extension could produce a NullPointerException when using only the Core API.
  - API: Added an annoying dialog that pops up when using the Core API, warning the developer that the much better Common API is available.
  - Bugfix: If a dockable was already marked as the "focused dockable", but the event of registering the dockable was delayed, then the already present DockTitles of said Dockable were not informed about the focus-state.
- ! API: The way in which LayerPriorities are merged has been changed - clients should not be affected by this change.  
+ ! API: The way in which LayerPriorities are merged has been changed - clients should not be affected by this change.
+ - API: Default background color of ToolbarContainerDockStation is now "null", but clients can also set a custom color.  
